...
    return Visibility(
      visible: savedBooksLength > 0,
      child: SizedBox(
        height: 300,
        width: double.infinity,
        child: CarouselSlider.builder(
          key: const ValueKey("Carousel Book"),
          itemCount: bookList.length,
          itemBuilder: (context, index, i) {
            return Container(
              clipBehavior: Clip.antiAlias,
              decoration: BoxDecoration(
                  borderRadius: BorderRadius.circular(8),
...
