...
      create: (context) => DetailBloc(),
      child: Scaffold(
        appBar: AppBar(
          automaticallyImplyLeading: false,
          title: AppBarView(
            onTapBack: () => Navigator.of(context).pop(),
            iconKey: const ValueKey("HomeBackButton"),
          ),
        ),
        body: NestedScrollView(
          headerSliverBuilder: (context, isScroll) => [
            SliverAppBar(
              automaticallyImplyLeading: false,
...
